assets/www/css/anyconference.css
#content {
    position: absolute;
    top: 4rem;
    left: 0;
    bottom: 0;
    width: 100%;
    overflow: hidden;
    background: #fff;
}

.item-details-wrap {
    position: absolute;
    width: 100%;
}

.fixed {
    position: fixed
}

.top {
    top: 0
}

.topcoat-view {
  border-radius: 6px;
}
.topcoat-navigation-bar__title {
  font-family: "League Gothic";
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  text-shadow: 0px 1px 0px #fff;
}
.item-list,
.item-page,
.item-details {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #ddd;
}
.anyconf-label-status {
  position: relative;
  background: #dcdcdc;
  height: 2.4rem;
  padding: 0;
  border: none;
  padding-left: 1rem;
  font-size: 1rem;
  box-sizing: border-box;
}
.anyconf-label-status--next {
  text-align: right;
  background: #9c3;
}
.anyconf-label-status--next:after {
  position: absolute;
  right: 0;
  top: 0;
  height: 90%;
  content: "UP NEXT";
  line-height: 2rem;
  font-size: 2rem;
  font-family: 'League Gothic';
  font-weight: 100;
  padding: 0.07rem 0.7rem;
  color: #fff;
  background: #9c3;
  text-shadow: 0px -1px 0px #51740a;
}
.anyconf-label-time {
  display: block;
  color: #707070;
  background: #f2f3f3;
  line-height: 1em;
  font-size: 1.1rem;
  padding: 0.5em 1em;
  text-shadow: 0px 1px 0px #fff;
}
.anyconf-label-title {
  font-weight: 200;
  margin: 0;
  padding-bottom: 0.5em;
}
.anyconf-label-speaker {
  font-size: 1.1rem;
}
.topcoat-card {
  position: relative;
  display: table;
  box-sizing: border-box;
  width: 100%;
  min-height: 8rem;
  padding: 1rem;
  background: #fff;
  border: 1px solid #e2b6cc;
}
.topcoat-card:after {
  display: block;
  position: absolute;
  margin-bottom: -0.75rem;
  margin-left: 1%;
  bottom: 0;
  left: 0;
  content: '';
  width: 98%;
  height: 10px;
  border-top: 1px solid #c69;
}
.topcoat-card-content {
  display: table-cell;
  vertical-align: middle;
}
.topcoat-card-components {
  position: absolute;
  bottom: 0;
  right: 0;
}
input[type="checkbox"] {
  display: none;
}
.topcoat-checkbox-label--left:before,
.topcoat-checkbox-label--right:after {
  background-position: left -37px;
}
input[type="checkbox"]:checked + .topcoat-checkbox-label--left:before,
input[type="checkbox"]:checked + .topcoat-checkbox-label--right:after {
  background-position: left -2px;
}
input[type="checkbox"]:disabled + label {
  opacity: 0.3;
  cursor: default;
  pointer-events: none;
}
.topcoat-checkbox-label--left:before,
.topcoat-checkbox-label--right:after {
  content: "";
  display: inline-block;
  width: 37px;
  height: 31px;
  background-repeat: no-repeat;
  background-size: 37px;
  cursor: pointer;
}
.topcoat-checkbox-label--left:before {
  margin-right: 15px;
}
.topcoat-checkbox-label--right:after {
  margin-left: 15px;
}
.topcoat-checkbox-label--left,
.topcoat-checkbox-label--right {
  box-sizing: border-box;
  padding: 0 1.25rem;
  margin: 5px;
  outline: none;
  font: 1em "Source Sans", helvetica, arial, sans-serif;
  font-weight: 200;
  line-height: 30px;
  vertical-align: top;
  user-select: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
}
.topcoat-not-checkbox {
  color: #454545;
  padding: 0 1.25rem;
  text-shadow: 0 1px #fff;
  background-color: #fff;
  box-shadow: inset 0 1px #fff;
  border: 1px solid #a5a8a8;
  border-radius: 5px;
}
.topcoat-checkbox-label-star {
  padding: 0;
  margin: 0px;
  outline: none;
  user-select: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
}
.topcoat-checkbox-label-star.topcoat-checkbox-label--left:before,
.topcoat-checkbox-label-star.topcoat-checkbox-label--right:after {
  background-position: center;
  background-size: 40px;
  width: 40px;
  height: 40px;
  background-image: url("../img/staroff.svg");
}
input[type="checkbox"]:checked + .topcoat-checkbox-label-star.topcoat-checkbox-label--left:before,
input[type="checkbox"]:checked + .topcoat-checkbox-label-star.topcoat-checkbox-label--right:after {
  background-image: url("../img/staron.svg");
}
.topcoat-checkbox-label-heart {
  padding: 0;
  margin: 0px;
  outline: none;
  user-select: none;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
}
.topcoat-checkbox-label-heart.topcoat-checkbox-label--left:before,
.topcoat-checkbox-label-heart.topcoat-checkbox-label--right:after {
  background-position: center;
  background-size: 40px;
  width: 40px;
  height: 40px;
  background-image: url("../img/heartoff.svg");
}
input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-label--left:before,
input[type="checkbox"]:checked + .topcoat-checkbox-label-heart.topcoat-checkbox-label--right:after {
  background-image: url("../img/hearton.svg");
}
.anyconf-menu {
  position: fixed;
  z-index: 30;
  top: 0;
  left: 0;
  width: 80vw;
  height: 100vh;
  background: #fff;
}
.anyconf-list {
  margin: 2rem 0 1rem;
  padding: 0;
  list-style: none;
}
.anyconf-list__header {
  position: relative;
  width: 75%;
  height: 3.3rem;
  margin: 0;
  padding: 0;
  color: #fff;
  background: #c69;
  font-weight: normal;
  font-size: 2.5rem;
  font-family: 'League Gothic';
  text-transform: uppercase;
  list-style: none;
}
.anyconf-list__item {
  width: 75%;
  height: 3.3rem;
  line-height: 2.5rem;
  padding: 0;
  font-size: 1rem;
  font-weight: 400;
  background: #e9bcd2;
  border-top: none;
}
.anyconf-list-label {
  display: inline-block;
  padding: 0 1rem;
  height: 3.3rem;
  line-height: 3.3rem;
}
.anyconf-list__item .anyconf-list-label {
  padding: 0;
}
.topcoat-icon--arrow {
  height: 3.3rem;
  width: 50px;
  border-right: 1px solid #fff;
  vertical-align: top;
  background-image: url("../img/arrowdown.svg");
  background-position: center;
}
.topcoat-icon--blank {
  height: 3.3rem;
  width: 50px;
  border-right: 1px solid transparent;
  vertical-align: top;
}
.topcoat-icon--left-arrow {
    background-size: 40px;
    background-image: url("../img/arrowleft.svg");
    background-position: 50% 50%;
}
/* ... */

